syntax = "proto3";

package kira.micro.service.auth;

option go_package = ".;pb";

import "proto/common.proto";

message AuthRequest {
    string userID = 1;
    string userRole = 2;
}

message AuthResponse {
    bool succ = 1;
    string msg = 2;
    string token = 3;
}

message TokenRequest {
    string token = 1;
}

message ValidResponse {
    bool succ = 1;
    string msg = 2;
    bool valid = 3;
    bool expired = 6;
    string userID = 4;
    string userRole=5;
}

message FileTokenRequest {
    string token = 1;
}

message FileTokenResponse {
    bool succ = 1;
    string msg = 2;
    string userID = 3;
}

service AuthService {
    rpc Auth(AuthRequest) returns (AuthResponse) {}
    rpc Valid(TokenRequest) returns (ValidResponse) {}
    rpc Refresh(TokenRequest) returns (AuthResponse) {}

    rpc FileToken(FileTokenRequest) returns (FileTokenResponse) {}

    rpc Ping(kira.micro.common.Ping) returns (kira.micro.common.Pong) {}
}